tests/snapshots/formats__cpio__bin-be.cpio.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ bin-be.cpio — cpio archive (old binary, big-endian), 3 entries, 86 bytes  [0x0+0xea]
  ▾ hello.txt — 10 bytes  [0x0+0x2e]
    ▾ Header  [0x0+0x1a]
        Magic: 0x71c7  [0x0+0x2]
        Device: 18  [0x2+0x2]
        Inode: 1  [0x4+0x2]
        Mode: 33188 — 0o100644 -rw-r--r--  [0x6+0x2]
        UID: 1000  [0x8+0x2]
        GID: 1000  [0xa+0x2]
        Links: 1  [0xc+0x2]
        Special device: 0  [0xe+0x2]
        Modification time: 2024-01-02 03:04:00 UTC  [0x10+0x4]
        Name size: 10  [0x14+0x2]
        File size: 10  [0x16+0x4]
      Name: "hello.txt"  [0x1a+0xa]
    ▾ Content — UTF-8 text, LF line endings, 1 line  [0x24+0xa]
        Encoding: "UTF-8"
        Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
      ▾ Lines — 1 line  [0x24+0xa]
          Line 1: "hello tar"  [0x24+0x9]
  ▾ link — symlink  [0x2e+0x2a]
    ▾ Header  [0x2e+0x1a]
        Magic: 0x71c7  [0x2e+0x2]
        Device: 18  [0x30+0x2]
        Inode: 2  [0x32+0x2]
        Mode: 41453 — 0o120755 lrwxr-xr-x  [0x34+0x2]
        UID: 1000  [0x36+0x2]
        GID: 1000  [0x38+0x2]
        Links: 1  [0x3a+0x2]
        Special device: 0  [0x3c+0x2]
        Modification time: 2024-01-02 03:04:00 UTC  [0x3e+0x4]
        Name size: 5  [0x42+0x2]
        File size: 9  [0x44+0x4]
      Name: "link"  [0x48+0x5]
      Link target: "hello.txt"  [0x4e+0x9]
  ▾ sub/pixel.png — 67 bytes  [0x58+0x6c]
    ▾ Header  [0x58+0x1a]
        Magic: 0x71c7  [0x58+0x2]
        Device: 18  [0x5a+0x2]
        Inode: 3  [0x5c+0x2]
        Mode: 33188 — 0o100644 -rw-r--r--  [0x5e+0x2]
        UID: 1000  [0x60+0x2]
        GID: 1000  [0x62+0x2]
        Links: 1  [0x64+0x2]
        Special device: 0  [0x66+0x2]
        Modification time: 2024-01-02 03:04:00 UTC  [0x68+0x4]
        Name size: 14  [0x6c+0x2]
        File size: 67  [0x6e+0x4]
      Name: "sub/pixel.png"  [0x72+0xe]
    ▾ Content — 1×1, 8-bit Grayscale  [0x80+0x43]
        Signature  [0x80+0x8]
      ▾ IHDR — 1×1, 8-bit Grayscale  [0x88+0x19]
          Length: 13  [0x88+0x4]
          Type: "IHDR" — critical, public, unsafe to copy  [0x8c+0x4]
        ▾ Header  [0x90+0xd]
            Width: 1  [0x90+0x4]
            Height: 1  [0x94+0x4]
            Bit depth: 8  [0x98+0x1]
            Color type: Grayscale (0x0)  [0x99+0x1]
            Compression method: 0  [0x9a+0x1]
            Filter method: 0  [0x9b+0x1]
            Interlace method: None (0x0)  [0x9c+0x1]
          CRC: 0x3a7e9b55 — valid  [0x9d+0x4]
      ▾ IDAT — 0xa bytes  [0xa1+0x16]
          Length: 10  [0xa1+0x4]
          Type: "IDAT" — critical, public, unsafe to copy  [0xa5+0x4]
          Data  [0xa9+0xa]
          CRC: 0x48afa471 — valid  [0xb3+0x4]
      ▾ IEND — 0x0 bytes  [0xb7+0xc]
          Length: 0  [0xb7+0x4]
          Type: "IEND" — critical, public, unsafe to copy  [0xbb+0x4]
          Data  [0xbf+0x0]
          CRC: 0xae426082 — valid  [0xbf+0x4]
  ▾ TRAILER!!! — end of archive  [0xc4+0x26]
    ▾ Header  [0xc4+0x1a]
        Magic: 0x71c7  [0xc4+0x2]
        Device: 0  [0xc6+0x2]
        Inode: 0  [0xc8+0x2]
        Mode: 0 — 0o0 ----------  [0xca+0x2]
        UID: 0  [0xcc+0x2]
        GID: 0  [0xce+0x2]
        Links: 1  [0xd0+0x2]
        Special device: 0  [0xd2+0x2]
        Modification time: 1970-01-01 00:00:00 UTC  [0xd4+0x4]
        Name size: 11  [0xd8+0x2]
        File size: 0  [0xda+0x4]
      Name: "TRAILER!!!"  [0xde+0xb]
