tests/snapshots/formats__cpio__newc.cpio.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ newc.cpio — cpio archive (SVR4 newc), 3 entries, 86 bytes  [0x0+0x240]
  ▾ hello.txt — 10 bytes  [0x0+0x84]
    ▾ Header  [0x0+0x6e]
        Magic: "070701"  [0x0+0x6]
        Inode: 40824568  [0x6+0x8]
        Mode: 33188 — 0o100644 -rw-r--r--  [0xe+0x8]
        UID: 1000  [0x16+0x8]
        GID: 1000  [0x1e+0x8]
        Links: 1  [0x26+0x8]
        Modification time: 2024-01-02 03:04:00 UTC  [0x2e+0x8]
        File size: 10  [0x36+0x8]
        Device major: 1  [0x3e+0x8]
        Device minor: 18  [0x46+0x8]
        Special device major: 0  [0x4e+0x8]
        Special device minor: 0  [0x56+0x8]
        Name size: 10  [0x5e+0x8]
        Checksum: 0x0  [0x66+0x8]
      Name: "hello.txt"  [0x6e+0xa]
    ▾ Content — 10 bytes  [0x78+0xa]
        ! unsupported: unrecognized format [0x78+0xa]
  ▾ link — symlink  [0x84+0x80]
    ▾ Header  [0x84+0x6e]
        Magic: "070701"  [0x84+0x6]
        Inode: 40824571  [0x8a+0x8]
        Mode: 41453 — 0o120755 lrwxr-xr-x  [0x92+0x8]
        UID: 1000  [0x9a+0x8]
        GID: 1000  [0xa2+0x8]
        Links: 1  [0xaa+0x8]
        Modification time: 2024-01-02 03:04:00 UTC  [0xb2+0x8]
        File size: 9  [0xba+0x8]
        Device major: 1  [0xc2+0x8]
        Device minor: 18  [0xca+0x8]
        Special device major: 0  [0xd2+0x8]
        Special device minor: 0  [0xda+0x8]
        Name size: 5  [0xe2+0x8]
        Checksum: 0x0  [0xea+0x8]
      Name: "link"  [0xf2+0x5]
      Link target: "hello.txt"  [0xf8+0x9]
  ▾ sub/pixel.png — 67 bytes  [0x104+0xc0]
    ▾ Header  [0x104+0x6e]
        Magic: "070701"  [0x104+0x6]
        Inode: 40824569  [0x10a+0x8]
        Mode: 33188 — 0o100644 -rw-r--r--  [0x112+0x8]
        UID: 1000  [0x11a+0x8]
        GID: 1000  [0x122+0x8]
        Links: 1  [0x12a+0x8]
        Modification time: 2024-01-02 03:04:00 UTC  [0x132+0x8]
        File size: 67  [0x13a+0x8]
        Device major: 1  [0x142+0x8]
        Device minor: 18  [0x14a+0x8]
        Special device major: 0  [0x152+0x8]
        Special device minor: 0  [0x15a+0x8]
        Name size: 14  [0x162+0x8]
        Checksum: 0x0  [0x16a+0x8]
      Name: "sub/pixel.png"  [0x172+0xe]
    ▾ Content — 1×1, 8-bit Grayscale  [0x180+0x43]
        Signature  [0x180+0x8]
      ▾ IHDR — 1×1, 8-bit Grayscale  [0x188+0x19]
          Length: 13  [0x188+0x4]
          Type: "IHDR" — critical, public, unsafe to copy  [0x18c+0x4]
        ▾ Header  [0x190+0xd]
            Width: 1  [0x190+0x4]
            Height: 1  [0x194+0x4]
            Bit depth: 8  [0x198+0x1]
            Color type: Grayscale (0x0)  [0x199+0x1]
            Compression method: 0  [0x19a+0x1]
            Filter method: 0  [0x19b+0x1]
            Interlace method: None (0x0)  [0x19c+0x1]
          CRC: 0x3a7e9b55 — valid  [0x19d+0x4]
      ▾ IDAT — 0xa bytes  [0x1a1+0x16]
          Length: 10  [0x1a1+0x4]
          Type: "IDAT" — critical, public, unsafe to copy  [0x1a5+0x4]
          Data  [0x1a9+0xa]
          CRC: 0x48afa471 — valid  [0x1b3+0x4]
      ▾ IEND — 0x0 bytes  [0x1b7+0xc]
          Length: 0  [0x1b7+0x4]
          Type: "IEND" — critical, public, unsafe to copy  [0x1bb+0x4]
          Data  [0x1bf+0x0]
          CRC: 0xae426082 — valid  [0x1bf+0x4]
  ▾ TRAILER!!! — end of archive  [0x1c4+0x7c]
    ▾ Header  [0x1c4+0x6e]
        Magic: "070701"  [0x1c4+0x6]
        Inode: 0  [0x1ca+0x8]
        Mode: 0 — 0o0 ----------  [0x1d2+0x8]
        UID: 0  [0x1da+0x8]
        GID: 0  [0x1e2+0x8]
        Links: 1  [0x1ea+0x8]
        Modification time: 1970-01-01 00:00:00 UTC  [0x1f2+0x8]
        File size: 0  [0x1fa+0x8]
        Device major: 0  [0x202+0x8]
        Device minor: 0  [0x20a+0x8]
        Special device major: 0  [0x212+0x8]
        Special device minor: 0  [0x21a+0x8]
        Name size: 11  [0x222+0x8]
        Checksum: 0x0  [0x22a+0x8]
      Name: "TRAILER!!!"  [0x232+0xb]
