tests/snapshots/formats__cpio__odc.cpio.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ odc.cpio — cpio archive (POSIX odc), 3 entries, 86 bytes  [0x0+0x1ae]
  ▾ hello.txt — 10 bytes  [0x0+0x60]
    ▾ Header  [0x0+0x4c]
        Magic: "070707"  [0x0+0x6]
        Device: 262143  [0x6+0x6]
        Inode: 1  [0xc+0x6]
        Mode: 33188 — 0o100644 -rw-r--r--  [0x12+0x6]
        UID: 1000  [0x18+0x6]
        GID: 1000  [0x1e+0x6]
        Links: 1  [0x24+0x6]
        Special device: 0  [0x2a+0x6]
        Modification time: 2024-01-02 03:04:00 UTC  [0x30+0xb]
        Name size: 10  [0x3b+0x6]
        File size: 10  [0x41+0xb]
      Name: "hello.txt"  [0x4c+0xa]
    ▾ Content — UTF-8 text, LF line endings, 1 line  [0x56+0xa]
        Encoding: "UTF-8"
        Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
      ▾ Lines — 1 line  [0x56+0xa]
          Line 1: "hello tar"  [0x56+0x9]
  ▾ link — symlink  [0x60+0x5a]
    ▾ Header  [0x60+0x4c]
        Magic: "070707"  [0x60+0x6]
        Device: 262143  [0x66+0x6]
        Inode: 2  [0x6c+0x6]
        Mode: 41453 — 0o120755 lrwxr-xr-x  [0x72+0x6]
        UID: 1000  [0x78+0x6]
        GID: 1000  [0x7e+0x6]
        Links: 1  [0x84+0x6]
        Special device: 0  [0x8a+0x6]
        Modification time: 2024-01-02 03:04:00 UTC  [0x90+0xb]
        Name size: 5  [0x9b+0x6]
        File size: 9  [0xa1+0xb]
      Name: "link"  [0xac+0x5]
      Link target: "hello.txt"  [0xb1+0x9]
  ▾ sub/pixel.png — 67 bytes  [0xba+0x9d]
    ▾ Header  [0xba+0x4c]
        Magic: "070707"  [0xba+0x6]
        Device: 262143  [0xc0+0x6]
        Inode: 3  [0xc6+0x6]
        Mode: 33188 — 0o100644 -rw-r--r--  [0xcc+0x6]
        UID: 1000  [0xd2+0x6]
        GID: 1000  [0xd8+0x6]
        Links: 1  [0xde+0x6]
        Special device: 0  [0xe4+0x6]
        Modification time: 2024-01-02 03:04:00 UTC  [0xea+0xb]
        Name size: 14  [0xf5+0x6]
        File size: 67  [0xfb+0xb]
      Name: "sub/pixel.png"  [0x106+0xe]
    ▾ Content — 1×1, 8-bit Grayscale  [0x114+0x43]
        Signature  [0x114+0x8]
      ▾ IHDR — 1×1, 8-bit Grayscale  [0x11c+0x19]
          Length: 13  [0x11c+0x4]
          Type: "IHDR" — critical, public, unsafe to copy  [0x120+0x4]
        ▾ Header  [0x124+0xd]
            Width: 1  [0x124+0x4]
            Height: 1  [0x128+0x4]
            Bit depth: 8  [0x12c+0x1]
            Color type: Grayscale (0x0)  [0x12d+0x1]
            Compression method: 0  [0x12e+0x1]
            Filter method: 0  [0x12f+0x1]
            Interlace method: None (0x0)  [0x130+0x1]
          CRC: 0x3a7e9b55 — valid  [0x131+0x4]
      ▾ IDAT — 0xa bytes  [0x135+0x16]
          Length: 10  [0x135+0x4]
          Type: "IDAT" — critical, public, unsafe to copy  [0x139+0x4]
          Data  [0x13d+0xa]
          CRC: 0x48afa471 — valid  [0x147+0x4]
      ▾ IEND — 0x0 bytes  [0x14b+0xc]
          Length: 0  [0x14b+0x4]
          Type: "IEND" — critical, public, unsafe to copy  [0x14f+0x4]
          Data  [0x153+0x0]
          CRC: 0xae426082 — valid  [0x153+0x4]
  ▾ TRAILER!!! — end of archive  [0x157+0x57]
    ▾ Header  [0x157+0x4c]
        Magic: "070707"  [0x157+0x6]
        Device: 0  [0x15d+0x6]
        Inode: 0  [0x163+0x6]
        Mode: 0 — 0o0 ----------  [0x169+0x6]
        UID: 0  [0x16f+0x6]
        GID: 0  [0x175+0x6]
        Links: 1  [0x17b+0x6]
        Special device: 0  [0x181+0x6]
        Modification time: 1970-01-01 00:00:00 UTC  [0x187+0xb]
        Name size: 11  [0x192+0x6]
        File size: 0  [0x198+0xb]
      Name: "TRAILER!!!"  [0x1a3+0xb]
